[gd_scene load_steps=4 format=3 uid="uid://d8m3xqm7nxwpa"]

[ext_resource type="Script" path="res://scenes/experiments/fireball_charge/test_target.gd" id="1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(60, 60)

[sub_resource type="Gradient" id="Gradient_target"]
colors = PackedColorArray(0.8, 0.3, 0.3, 1, 0.5, 0.1, 0.1, 1)

[node name="TestTarget" type="Area2D"]
script = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="Sprite2D" type="ColorRect" parent="."]
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
color = Color(0.8, 0.3, 0.3, 1)

[node name="HealthBar" type="ColorRect" parent="."]
offset_left = -30.0
offset_top = -40.0
offset_right = 30.0
offset_bottom = -35.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="Fill" type="ColorRect" parent="HealthBar"]
layout_mode = 0
offset_right = 60.0
offset_bottom = 5.0
color = Color(0, 1, 0, 1)

[node name="DamageLabel" type="Label" parent="."]
offset_left = -20.0
offset_top = -50.0
offset_right = 20.0
offset_bottom = -30.0
theme_override_colors/font_color = Color(1, 0.3, 0, 1)
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[connection signal="area_entered" from="." to="." method="_on_area_entered"]

